--- a/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_availability.xml
@@ -65,7 +65,8 @@
                     android:hint="09:00"
                     android:layout_gravity="center"
                     android:layout_marginEnd="10dp"
-                    android:inputType="time"/>
+                    android:inputType="time"
+                    android:digits="0123456789:"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -76,6 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:hint="18:00"
+                    android:digits="0123456789:"
                     android:inputType="time"
                     android:layout_marginStart="10dp"/>
 
@@ -104,6 +106,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="09:00"
+                        android:digits="0123456789:"
                         android:inputType="time"
                         android:layout_gravity="center"
                         android:layout_marginEnd="10dp"/>
@@ -118,6 +121,7 @@
                         android:layout_gravity="center"
                         android:inputType="time"
                         android:hint="18:00"
+                        android:digits="0123456789:"
                         android:layout_marginStart="10dp"/>
 
                 </LinearLayout>
