--- a/Auriculoterapia/app/src/main/res/layout/activity_edit_photo_from_request.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_edit_photo_from_request.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +9,53 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center"
+        android:orientation="vertical"
         android:padding="16dp">
-    <ImageView
-        android:id="@+id/imagenFotoAEditar"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_marginBottom="16dp"
-        android:background="#CDCDCD"
-        />
-
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GUARDAR"
+            android:layout_gravity="center"
+            android:text="Dibuje los puntos en la oreja del paciente"
+            android:layout_marginBottom="12dp"
+            android:textSize="16sp"/>
+        <com.example.android.auriculoterapia_app.util.DrawableImageView
+            android:id="@+id/toEditPhoto"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginBottom="12dp"
             />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+
+           <Button
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
+                android:text="CANCELAR" />
+
+            <Button
+                android:id="@+id/clearPoints"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:text="LIMPIAR" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/saveEditedImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GUARDAR" />
+
+        </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
