--- a/Auriculoterapia/app/src/main/res/layout/activity_search_patients.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_search_patients.xml
@@ -6,16 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".activities.PatientsManagementActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/errorBuscadorPacientes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginEnd="24dp"
+            android:layout_gravity="end"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
+            android:layout_marginTop="2dp"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewPatients"
+            android:layout_width="match_parent"
+            android:layout_height="729dp"
+            android:layout_margin="4dp"
+            />
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/progressBarPatients"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewPatients"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-      />
 
 </RelativeLayout>
