--- a/Auriculoterapia/app/src/main/res/layout/fragment_general_results.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_general_results.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp"
-            android:gravity="start"
+            android:gravity="center"
             android:layout_marginBottom="12dp"
             >
 
