--- a/Auriculoterapia/app/src/main/res/layout/activity_change_key_word.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_change_key_word.xml
@@ -34,6 +34,8 @@
         android:layout_marginTop="114dp"
         android:ems="10"
         android:hint="actual"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/tv_palabraClaveActual"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +48,8 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="nuevo"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/tv_palabraClaveNueva"
         app:layout_constraintTop_toBottomOf="@+id/et_palabraClaveActual" />
