--- a/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_log_in.xml
@@ -92,6 +92,7 @@
         android:layout_marginEnd="55dp"
         android:ems="10"
         android:hint="@string/password"
+        android:maxLength="20"
         android:inputType="textPassword"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +106,8 @@
         android:layout_marginEnd="55dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_userlog"
         app:layout_constraintEnd_toEndOf="parent"
