--- a/Auriculoterapia/app/src/main/res/layout/activity_register.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
         android:hint="@string/nombre_de_usuario"
         android:inputType="textPersonName"
         android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
-        android:maxLength="15"
+        android:maxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvNombre"
         app:layout_constraintTop_toBottomOf="@+id/tv_Registro" />
@@ -109,7 +109,7 @@
         android:ems="10"
         android:hint="@string/str_apellidohint"
         android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
-        android:maxLength="15"
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvApellido"
@@ -124,6 +124,8 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvUsuario"
@@ -138,6 +140,8 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/str_keywordhint"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvKeyWordRegistro"
@@ -152,6 +156,7 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="@string/password"
+        android:maxLength="20"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvPasswordRegistro"
