--- a/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:hint="70.0"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_peso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
