--- a/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_evaluation_form_treatment.xml
@@ -97,10 +97,10 @@
 
     <TextView
         android:id="@+id/tv_tratamientoResult"
-        android:layout_width="58dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="155dp"
-        android:text="TextView"
+        android:layout_width="114dp"
+        android:layout_height="21dp"
+        android:layout_marginEnd="99dp"
+        android:text="Tipo"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_Tratamiento"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -137,9 +137,19 @@
         android:id="@+id/tv_resultCodigo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="83dp"
+        android:layout_marginStart="24dp"
         android:text="1"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_Codigo"
         app:layout_constraintStart_toEndOf="@+id/tv_Codigo" />
+
+    <TextView
+        android:id="@+id/tv_errorSpinnerCodigo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner_codigoTratamiento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/spinner_codigoTratamiento"
+        app:layout_constraintVertical_bias="0.47" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
