--- a/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:hint="otros"
+        android:maxLength="30"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,6 +32,7 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="70.0"
+        android:maxLength="4"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -55,6 +57,7 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="1.70"
+        android:maxLength="4"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -139,6 +142,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:hint="Dolor..."
+        android:maxLength="30"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
