--- a/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,6 +26,8 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/str_keywordhint"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789#$ "
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_usuario" />
@@ -67,6 +69,7 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/password"
+        android:maxLength="20"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_keyWord2" />
@@ -88,8 +91,8 @@
         android:layout_marginEnd="26dp"
         android:ems="10"
         android:hint="@string/nombre_de_usuario"
-        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
-        android:maxLength="15"
+        android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ123456789"
+        android:maxLength="20"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_ForgotPassword" />
