--- a/Auriculoterapia/app/src/main/res/layout/activity_answer_treatment_request.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_answer_treatment_request.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.AnswerTreatmentRequestActivity">
 
-    <androidx.cardview.widget.CardView
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardCornerRadius="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
@@ -207,25 +207,58 @@
                     android:textSize="@dimen/text_size" />
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:padding="4dp"
-                android:layout_marginEnd="12dp"
-                android:gravity="end">
-
-                <Button
-
-                    android:id="@+id/botonSiguiente"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="16dp">
+                <TextView
+                    android:id="@+id/textoPuntos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Dibuje los puntos en la\noreja del paciente"
+                    android:textAlignment="center"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:layout_marginBottom="12dp"
+                    android:textSize="16sp"/>
+                <com.example.android.auriculoterapia_app.util.DrawableImageView
+                    android:id="@+id/toEditPhoto"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_marginBottom="12dp"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    >
 
-                    android:text="SIGUIENTE" />
+                    <Button
+                        android:id="@+id/clearPoints"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="LIMPIAR" />
 
+                    <Button
+                        android:id="@+id/saveFormTreatment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:text="ENVIAR" />
 
+                </LinearLayout>
             </LinearLayout>
+
+
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+   </LinearLayout>
+</ScrollView>
