--- a/Auriculoterapia/app/src/main/res/layout/activity_general_results.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_general_results.xml
@@ -78,6 +78,11 @@
                 />
 
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="6dp"
+            android:background="@android:color/darker_gray" />
 
 
 
