--- a/Auriculoterapia/app/src/main/res/layout/fragment_general_results.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_general_results.xml
@@ -17,11 +17,11 @@
             android:layout_height="wrap_content">
 
             <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/pieChartCantidadPacientes"
+                android:id="@+id/pieChartCantidadPacientesPorCategoriaDeEdad"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"
                 android:layout_gravity="center"/>
 
 
@@ -29,18 +29,18 @@
                 android:id="@+id/pieChartPacientesPorSexo"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="16dp"
                 android:layout_gravity="center"/>
 
 
-            <com.github.mikephil.charting.charts.PieChart
+            <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/barChartNivelesMejoraPacientes"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginHorizontal="16dp"
                 android:layout_gravity="center"
+                android:layout_marginVertical="16dp"
                 android:layout_marginBottom="20dp"/>
 
         </LinearLayout>
