--- a/Auriculoterapia/app/src/main/res/values/colors.xml
+++ b/Auriculoterapia/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="IMC1">#F2BA52</color>
+    <color name="IMC2">#FDE289</color>
+    <color name="IMC3">#FEF0C1</color>
+    <color name="IMC4">#D2E1CB</color>
+    <color name="IMC5">#F5C09E</color>
+    <color name="IMC6">#EEA070</color>
+    <color name="IMC7">#B8450F</color>
+
+    <color name="GC1">#18B034</color>
+    <color name="GC2">#21E545</color>
+    <color name="GC3">#CFFE11</color>
+    <color name="GC4">#FDC629</color>
+
 </resources>
