--- a/Auriculoterapia/app/src/main/res/layout/activity_peso_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_peso_patient.xml
@@ -11,6 +11,10 @@
         android:layout_height="match_parent"
         android:id="@+id/barChartResultPatient">
 
+        <TextView
+            android:id="@+id/tv_pruebabarchart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </com.github.mikephil.charting.charts.BarChart>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
