--- a/Auriculoterapia/app/src/main/res/layout/activity_result_patient.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_result_patient.xml
@@ -20,8 +20,8 @@
     <Spinner
         android:id="@+id/spinner_TratamientosResultadosPacientes"
         android:layout_width="213dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="49dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="44dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
@@ -30,8 +30,8 @@
         android:id="@+id/tableLayout_resultpatient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintTop_toBottomOf="@+id/spinner_TratamientosResultadosPacientes">
 
         <TableRow android:background="#E5E9EC">
@@ -183,28 +183,27 @@
 
     <Button
         android:id="@+id/btn_EvolucionSintomas"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="50dp"
         android:background="@drawable/line_chart_3_"
-        android:textSize="10sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_Peso"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_Peso"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="29dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/chart_image"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_GC"
         app:layout_constraintStart_toEndOf="@+id/btn_EvolucionSintomas" />
 
     <Button
         android:id="@+id/btn_RatioEvolucion"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/chart_image"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn_GC"
         app:layout_constraintStart_toEndOf="@+id/btn_GC" />
@@ -212,7 +211,7 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="62dp"
-        android:layout_height="45dp"
+        android:layout_height="30dp"
         android:text="Evolución de sintomas"
         android:textAlignment="center"
         android:textSize="10sp"
@@ -223,7 +222,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="42dp"
+        android:layout_marginStart="40dp"
         android:text="IMC"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -231,10 +230,10 @@
 
     <Button
         android:id="@+id/btn_GC"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/chart_image"
         app:layout_constraintStart_toEndOf="@+id/btn_Peso"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout_resultpatient" />
@@ -253,8 +252,8 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="400dp"
-        android:layout_height="323dp"
+        android:layout_width="350dp"
+        android:layout_height="287dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
@@ -268,7 +267,6 @@
                 android:id="@+id/tableLayout_infoNivelEficiencia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:padding="10dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -584,8 +582,8 @@
         android:id="@+id/textView7"
         android:layout_width="56dp"
         android:layout_height="29dp"
-        android:layout_marginStart="15dp"
-        android:text="Ratio de Evolucion"
+        android:layout_marginStart="35dp"
+        android:text="Nivel de eficiencia"
         android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
