--- a/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
+++ b/Auriculoterapia/app/src/main/res/layout/fragment_new_treatment.xml
@@ -31,8 +31,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="26dp"
         android:ems="10"
-        android:hint="70.0"
-        android:maxLength="4"
+        android:hint="70.5"
+        android:maxLength="5"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -178,5 +178,15 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_InsertarImagen"
         app:layout_constraintTop_toBottomOf="@+id/et_Sintomas"
         app:srcCompat="@drawable/check" />
+
+    <Button
+        android:id="@+id/btn_tooltip_otros"
+        android:layout_width="28dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="7dp"
+        android:background="@drawable/info_image"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_otros"
+        app:layout_constraintStart_toEndOf="@+id/tv_otros"
+        app:layout_constraintTop_toTopOf="@+id/tv_otros" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
