--- a/Auriculoterapia/app/src/main/res/layout/activity_ratio_evolucion.xml
+++ b/Auriculoterapia/app/src/main/res/layout/activity_ratio_evolucion.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_ratioEvolucion"
         android:layout_width="match_parent"
         android:layout_height="408dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="17dp"
         android:background="@drawable/ratio_evolucion_forma"
         android:paddingStart="140dp"
         android:paddingTop="160dp"
@@ -18,6 +18,19 @@
         android:paddingBottom="140dp"
         android:text="80%"
         android:textSize="44sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="124dp"
+        android:text="Nivel de eficiencia"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
